# chat-server

./: .gitignore  CMakeLists.txt  FRIEND_REQUEST_IMPLEMENTATION.md  FRIEND_REQUEST_UPDATE.md  build.sh  build_debug.sh  build_smtp_test.sh  chat_test.py  clean_old_tables.sh  clean_redis_groups.sh  client_test.py  create_test_users.sql  demo_friend_requests.py  friend_request_test.py  init_db.sh  registration_test.py  setup_test_users.sh  simple_register_test.py  smtp_test.py
database/: add_foreign_keys.sql  messages_schema.sql  messages_schema_updated.sql
smtp_test_cmake/: CMakeLists.txt  smtp_cpp_test.cpp
src/: main.cpp
src/model/: User.h  UserModel.cpp  UserModel.cpp.new  UserModel.h
src/server/: ChatServer.chat.cpp  ChatServer.cpp  ChatServer.cpp.new  ChatServer.h  ChatServer.message.cpp
src/service/: EmailService.cpp  EmailService.h  MessageArchiveService.cpp  MessageArchiveService.h  RedisService.cpp  RedisService.h  VerificationCodeService.cpp  VerificationCodeService.h
